--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node server",
+    "backend": "json-server db.cjs --port 3030",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "lint:fix": "eslint . --ext ts,tsx --report-unused-disable-directives --fix",
     "pretty:fix": "prettier --write .",
@@ -15,11 +16,13 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.18.3",
+    "json-server": "0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sirv": "^2.0.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
